--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
             <div type="button" id="yellow" class="btn yellow"></div>
             <div type="button" id="blue" class="btn blue"></div>
         </div>
-    </div>    
-<script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>    
+    </div>   
+    
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
 <script src="game.js"></script>
 </body>
 </html>
