--- a/index.html
+++ b/index.html
@@ -23,7 +23,8 @@
         </div>
     </div>   
     
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-<script src="game.js"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="game.js" charset="utf-8"></script>
 </body>
+
 </html>
